samples/istio-toy-project/istio/toy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeserver-deployment
  annotations:
    comment: This is the deployment object for the timeserver pods
spec:
  selector:
    matchLabels:
      app: timeserver
  replicas: 2
  template:
    metadata:
      labels:
        app: timeserver
      annotations:
        comment: This is a pod which is part of the timeserver deployment
    spec:
      containers:
        - name: timeserver
          image: ftarmedia/toymesh-timeserver:2
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: timeserver-service
  annotations:
    comment: Service for the timeserver microservice
spec:
  selector:
    app: timeserver
  ports:
    - port: 9082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  annotations:
    comment: This is the deployment object for the backend pods
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
      annotations:
        comment: This is a pod which is part of the backend deployment
    spec:
      containers:
        - name: backend
          image: ftarmedia/toymesh-backend:3
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    comment: Service for the backend microservice
spec:
  selector:
    app: backend
  ports:
    - port: 9081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    comment: This is the web deployment, which is the front-end of the app
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  template:
    metadata:
      labels:
        app: web
      annotations:
        comment: This pod belongs to web-deployment
    spec:
      containers:
        - name: web
          image: ftarmedia/toymesh-web:2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  annotations:
    comment: Service for the web microservice
spec:
  selector:
    app: web
  ports:
    - port: 9080
      targetPort: 8080
