samples/istio-toy-project/istio/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: toymesh-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: toymesh-gateway-vs
spec:
  hosts:
    - "*"
  gateways:
    - toymesh-gateway
  http:
    - route:
      - destination:
          host: web-service
