samples/istio-toy-project/istio/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-np
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - ports:
        - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-np
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web
      ports:
        - port: 8081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: timeserver-np
spec:
  podSelector:
    matchLabels:
      app: timeserver
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - port: 8082
